feat(reject-request): add manager can reject or accept pending request (#34)
- manager can only accept or reject pending requests
- manager can not reject accepted requests and vice versa
- manager can not reject already rejected requests and vice versa

[Delivers  #168131426]
